--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@rushstack/eslint-patch": "^1.8.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
-        "@vue-pdf-viewer/viewer": "^1.4.1-rc.4",
+        "@vue-pdf-viewer/viewer": "latest",
         "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^13.0.0",
         "@vue/server-renderer": "^3.4.0",
