--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
         "build": "vue-tsc && vite build && vite build --ssr && vite build && vite build --ssr --ssr",
         "lint": "eslint resources/js --ext .js,.ts,.vue --ignore-path .gitignore --fix"
     },
+    "dependencies": {
+        "@vue-pdf-viewer/viewer": "latest"
+    },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@rushstack/eslint-patch": "^1.8.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
-        "@vue-pdf-viewer/viewer": "latest",
         "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^13.0.0",
         "@vue/server-renderer": "^3.4.0",
